# EasyMat

./: CMakeLists.txt  README.md
docs/: API_DOCUMENTATION.md  USAGE_GUIDE.md
include/EasyMat/: jh_matrix.h
src/: jh_matrix.cpp
